test/errors/error31.vult
fun foo() {
  val y : 1;
  val x : aarray(1,2);
}